<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/title0"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/foto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/foto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nombre_sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dp"
                android:layout_below="@+id/foto"
                android:layout_marginTop="70dp"
                android:text="@string/sinopsis"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre_sinopsis"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sinopsis"
                android:layout_marginTop="20dp"
                android:onClick="irtrailer"
                android:text="@string/ver_trailer" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/foto"
                android:layout_below="@+id/foto"
                android:layout_marginRight="19dp"
                android:layout_marginTop="19dp"
                android:clickable="true"
                android:contentDescription="@string/menu1"
                android:onClick="volver"
                android:src="@drawable/ivolver" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>